manifests/redis-deployment-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master-dev
  labels:
    environment: dev
    app: redis-dev
    role: master
    tier: backend
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis-dev
    role: master
    tier: backend
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: redis-master
  labels:
    environment: dev
    app: redis-dev
spec:
  selector:
    matchLabels:
      app: redis-dev
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-dev
        role: master
        tier: backend
    spec:
      containers:
      - name: master-dev
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
