manifests/odetect-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: odetect-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - sensors.odetect.brave.coop
    secretName: odetect-tls
  rules:
  - host: sensors.odetect.brave.coop
    http:
      paths:
      - backend:
          serviceName: odetect
          servicePort: 8080
